my account screen added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="_7_425">$7,425</string>
     <string name="available_balance">Available balance</string>
     <string name="spent">Spent</string>
+    <string name="link_new_account">Link new account</string>
 </resources>
